workloads/every-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: every
  labels:
    app: every
spec:
  ports:
    - port: 4000
      protocol: TCP
      name: http
  selector:
    app: every
